python-tooz (1.40.0-1) experimental; urgency=medium

  [ Ondřej Nový ]
  * Standards-Version is 3.9.8 now (no change)
  * d/rules: Changed UPSTREAM_GIT protocol to https

  [ Thomas Goirand ]
  * New upstream release.
  * Fixed (build-)depends for this release.

 -- Thomas Goirand <zigo@debian.org>  Wed, 13 Jul 2016 13:01:52 +0200

python-tooz (1.34.0-2) unstable; urgency=medium

  * Uploading to unstable.

 -- Thomas Goirand <zigo@debian.org>  Tue, 05 Apr 2016 11:19:25 +0000

python-tooz (1.34.0-1) experimental; urgency=medium

  [ Corey Bryant ]
  * d/rules: Enable py3 tests.

  [ Ondřej Nový ]
  * Fixed VCS URLs (https).

  [ Thomas Goirand ]
  * New upstream release.
  * Fixed (build-)depends for this release.
  * Cleans /tmp/groups before running unit tests, which was the reason so that
    Py3 tests were failing.
  * Standards-Version: 3.9.7 (no change).

 -- Thomas Goirand <zigo@debian.org>  Wed, 09 Mar 2016 16:46:24 +0100

python-tooz (1.29.0-1) experimental; urgency=medium

  * New upstream release.
  * Fixed (build-)depends for this release.
  * Fixed debian/copyright ordering.

 -- Thomas Goirand <zigo@debian.org>  Tue, 19 Jan 2016 02:10:55 +0000

python-tooz (1.21.0-2) unstable; urgency=medium

  * Uploading to unstable.
  * Fixed new upsteram VCS and watch file using github not PyPi.
  * Using override_dh_auto_install not dh_install.

 -- Thomas Goirand <zigo@debian.org>  Fri, 16 Oct 2015 12:16:04 +0000

python-tooz (1.21.0-1) experimental; urgency=medium

  * New upstream release.
  * Fixed (build-)depends for this release.
  * Fixed MySQLd runs in unit tests.
  * Disabled Py3 tests as it fails in concurrent.futures.

 -- Thomas Goirand <zigo@debian.org>  Thu, 06 Aug 2015 07:56:31 +0000

python-tooz (0.13.1-2) unstable; urgency=medium

  * Do not test using redis-server: it seems there's issues with it.

 -- Thomas Goirand <zigo@debian.org>  Wed, 06 May 2015 11:02:28 +0200

python-tooz (0.13.1-1) unstable; urgency=medium

  * New upstream release.